# image_pipeline

image_publisher/: CMakeLists.txt
image_publisher/include/image_publisher/: image_publisher.hpp
image_publisher/src/: image_publisher.cpp  image_publisher_node.cpp
